# flask-test-task

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  test.py
instance/: example.sqlite
