[tool.poetry]
name = "flask-test-task"
version = "0.1.0"
description = ""
authors = ["va1ker <dead1nside.inside@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = {extras = ["sqlalchemy"], version = "^3.0.2"}
requests = "^2.31.0"
SQLAlchemy = "^2.0.27"
python-dotenv = "^1.0.1"
geopy = "^2.4.1"
flask-sqlalchemy = "^3.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
