[tool.poetry]
name = "flask-test-task"
version = "0.1.0"
description = ""
authors = ["va1ker <dead1nside.inside@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = {extras = ["async"], version = "^3.0.2"}
requests = "^2.31.0"
python-dotenv = "^1.0.1"
geopy = {extras = ["aiohttp"], version = "^2.4.1"}
flask-sqlalchemy = "^3.1.1"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
